--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -8,11 +8,9 @@
     <% authors.forEach(author => { %> <% if (author.id === book.author) { %>
     <option selected label="<%= author.name %>" value="<%= author.id %>">
       <% } else { %>
-    </option>
-
     <option label="<%= author.name %>" value="<%= author.id %>">
-      <% } %> <% }) %>
-    </option>
+      <% } %> 
+      <% }) %>
   </select>
 </div>
 <div>
@@ -29,7 +27,7 @@
 </div>
 <div>
   <label>Cover</label>
-  <input type="file" name="cover" />
+  <input type="file" name="cover" class="filepond" />
 </div>
 <div>
   <label>Description</label>
