--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,8 +12,8 @@
       href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/stylesheets/main.css">
-    <!-- <script defer src="/javascripts/fileUpload.js"></script> -->
+    <link id="main-css" rel="stylesheet" href="/stylesheets/main.css">
+    <script defer src="/javascripts/fileUpload.js"></script>
     <title>Mybrary</title>
   </head>
   <body>
@@ -21,25 +21,12 @@
       <%- include("../partials/header.ejs") %> 
       <div class="inner-container">
         <%- include("../partials/errorMessage.ejs") %>
+        <%- body %>
       </div>
     </div>
-  <%- body %>
   </body>
   <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
   <script src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
   <script src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
   <script src="https://unpkg.com/filepond@^4/dist/filepond.js"></script>
-  <script>
-    FilePond.registerPlugin(FilePondPluginImagePreview);
-    FilePond.registerPlugin(FilePondPluginImageResize);
-    FilePond.registerPlugin(FilePondPluginFileEncode);
-    const inputElement = document.querySelector('input[type="file"]');
-    const pond = FilePond.create(inputElement);
-    FilePond.setOptions({
-      stylePanelAspectRatio: 150 / 100,
-      imageResizeTargetWidth: 100,
-      imageResizeTargetHeight: 150,
-    });
-    FilePond.parse(document.body);
-  </script>
 </html>
